--- a/src/components/ask/askEng.pug
+++ b/src/components/ask/askEng.pug
@@ -1,7 +1,7 @@
 .ask#ask
   .container
     p(data-aos="fade-in" data-aos-duration="1800").ask__title.title START A CONVERSATION RIGHT NOW:
-    .ask__box
+    div(data-aos="fade-in" data-aos-duration="1800" data-aos-delay="500").ask__box
       .ask__image
         img(src=require("../../../images/student_asking_question.svg"), alt="ask") 
       form.ask__form.form(action="https://formsubmit.co/contato@eformaliza.com" method="POST")
