--- a/src/components/creation/creation.pug
+++ b/src/components/creation/creation.pug
@@ -1,7 +1,7 @@
 .creation#creation
   .container
     div(data-aos="fade-in" data-aos-duration="1800").creation__title.title Criamos
-    .creation__row  
+    div(data-aos="fade-in" data-aos-duration="1800" data-aos-delay="400").creation__row  
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/design.svg"), alt="web-design")
@@ -15,7 +15,7 @@
           img(src=require("../../../images/icons/bolos/card.svg"), alt="card")
         .item__description Cartões de Visita Virtuais
     div(data-aos="fade-in" data-aos-duration="1800").creation__title.title Serviços relacionados
-    .creation__row
+    div(data-aos="fade-in" data-aos-duration="1800" data-aos-delay="400").creation__row
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/maintenance.svg"), alt="maintenance")
@@ -29,13 +29,13 @@
           img(src=require("../../../images/icons/bolos/coding.svg"), alt="coding")
         .item__description Serviços de Programação Front-End
     .creation__box
-      .creation__question O que garantimos ?
-      .creation__about
+      div(data-aos="fade-in" data-aos-duration="1800").creation__question O que garantimos ?
+      div(data-aos="fade-in" data-aos-duration="1800").creation__about
         ul 
           li Suporte técnico
           li Desenvolvimento de funcionalidades
           li Consultoria
-    a.creation__btn.btn(href="#ask") Saiba mais!
+    a(data-aos="fade-in" data-aos-duration="1800").creation__btn.btn(href="#ask") Saiba mais!
       
 
     
