--- a/src/components/creation/creationEng.pug
+++ b/src/components/creation/creationEng.pug
@@ -1,7 +1,7 @@
 .creation#creation
   .container
     div(data-aos="fade-in" data-aos-duration="1800").creation__title.title Creation
-    .creation__row  
+    div(data-aos="fade-in" data-aos-duration="1800" data-aos-delay="400").creation__row  
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/design.svg"), alt="web-design")
@@ -15,7 +15,7 @@
           img(src=require("../../../images/icons/bolos/card.svg"), alt="card")
         .item__description Virtual Business Cards
     div(data-aos="fade-in" data-aos-duration="1800").creation__title.title Related services
-    .creation__row
+    div(data-aos="fade-in" data-aos-duration="1800" data-aos-delay="400").creation__row
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/maintenance.svg"), alt="maintenance")
@@ -29,13 +29,13 @@
           img(src=require("../../../images/icons/bolos/coding.svg"), alt="coding")
         .item__description Front-End Programming Services
     .creation__box
-      .creation__question Our guarantees
-      .creation__about
+      div(data-aos="fade-in" data-aos-duration="1800").creation__question Our guarantees
+      div(data-aos="fade-in" data-aos-duration="1800").creation__about
         ul 
           li Technical support
           li Development
           li Consulting
-    a.creation__btn.btn(href="#ask") Learn more!
+    a(data-aos="fade-in" data-aos-duration="1800").creation__btn.btn(href="#ask") Learn more!
       
 
     
