--- a/src/components/creation/creationEsp.pug
+++ b/src/components/creation/creationEsp.pug
@@ -1,7 +1,7 @@
 .creation#creation
   .container
     div(data-aos="fade-in" data-aos-duration="1800").creation__title.title Creamos
-    .creation__row  
+    div(data-aos="fade-in" data-aos-duration="1800" data-aos-delay="400").creation__row  
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/design.svg"), alt="web-design")
@@ -15,7 +15,7 @@
           img(src=require("../../../images/icons/bolos/card.svg"), alt="card")
         .item__description Tarjetas de visita virtuales
     div(data-aos="fade-in" data-aos-duration="1800").creation__title.title Servicios relacionados
-    .creation__row
+    div(data-aos="fade-in" data-aos-duration="1800" data-aos-delay="400").creation__row
       .creation__item.item
         .item__img
           img(src=require("../../../images/icons/bolos/maintenance.svg"), alt="maintenance")
@@ -29,13 +29,13 @@
           img(src=require("../../../images/icons/bolos/coding.svg"), alt="coding")
         .item__description Servicios de programación front-end
     .creation__box
-      .creation__question ¿Qué garantizamos?
-      .creation__about
+      div(data-aos="fade-in" data-aos-duration="1800").creation__question ¿Qué garantizamos?
+      div(data-aos="fade-in" data-aos-duration="1800").creation__about
         ul 
           li Soporte técnico
           li Desarrollo de funciones
           li Consultoría
-    a.creation__btn.btn(href="#ask") ¡Saber mas!
+    a(data-aos="fade-in" data-aos-duration="1800").creation__btn.btn(href="#ask") ¡Saber mas!
       
 
     
