--- a/src/components/discount/discount.pug
+++ b/src/components/discount/discount.pug
@@ -1,11 +1,11 @@
 .discount
   .container
     p(data-aos="fade-in" data-aos-duration="1800").discount__title.title Atenção!!!
-    .discount__image 
+    div(data-aos="fade-in" data-aos-duration="1800" data-aos-delay="300").discount__image 
       img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/fire.png"), alt="sale")
     .discount__timer.timer
-      p.timer__text ATÉ 31 DE JULHO, GANHE DESCONTO PROMOCIONAL DE 10% EM TODOS OS NOSSOS SERVIÇOS      
+      p(data-aos="fade-in" data-aos-duration="1800").timer__text ATÉ 31 DE SETEMBRO, GANHE DESCONTO PROMOCIONAL DE 10% EM TODOS OS NOSSOS SERVIÇOS      
       p.timer__time 21:13:33
       a.timer__title(href="#ask") 
-        p.timer__link Clique para o primeiro passo!   
-        p A concorrência já está online e você?
+        p(data-aos="fade-in" data-aos-duration="1800").timer__link Clique para o primeiro passo!   
+        p(data-aos="fade-in" data-aos-duration="1800" data-aos-delay="400") A concorrência já está online e você?
