--- a/src/components/discount/discountEng.pug
+++ b/src/components/discount/discountEng.pug
@@ -1,11 +1,11 @@
 .discount
   .container
     p(data-aos="fade-in" data-aos-duration="1800").discount__title.title Attention!!!
-    .discount__image 
+    div(data-aos="fade-in" data-aos-duration="1800" data-aos-delay="300").discount__image 
       img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/fire.png"), alt="sale")
     .discount__timer.timer
-      p.timer__text UNTIL JULY 31, GET 10% PROMO DISCOUNT ON ALL OUR SERVICES    
+      p(data-aos="fade-in" data-aos-duration="1800").timer__text UNTIL SEPTEMBER 31, GET 10% PROMO DISCOUNT ON ALL OUR SERVICES    
       p.timer__time 21:13:33
       a.timer__title(href="#ask") 
-        p.timer__link Click here for the first step!   
-        p Your competitors are already online and you?
+        p(data-aos="fade-in" data-aos-duration="1800").timer__link Click here for the first step!   
+        p(data-aos="fade-in" data-aos-duration="1800" data-aos-delay="400") Your competitors are already online and you?
