--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,6 +1,6 @@
-footer.footer#contacts
+footer.footer#contacts(data-aos="fade-in" data-aos-duration="1800")
   .container 
-    p(data-aos="fade-in" data-aos-duration="1800").footer__title.title Contatos
+    p.footer__title.title Contatos
     .footer__row
       a.footer__item(href="https://wa.me/5521999365384")
         img(src=require("../../../images/icons/new-footer-icons/whatsapp.svg"), alt="whatsapp")
@@ -11,9 +11,6 @@ footer.footer#contacts
       a.footer__item(href= "https://www.instagram.com/eformaliza/") 
         img(src=require("../../../images/icons/new-footer-icons/instagram.svg"), alt="instagram")
         p @eformaliza
-      //- a.footer__item(href="https://facebook.com") 
-      //-   img(src=require("../../../images/icons/new-footer-icons/facebook.svg"), alt="facebook")
-      //-   p facebook
     .footer__box 
       .footer__unit 
         .footer__dove 
