--- a/src/components/footer/footerEsp.pug
+++ b/src/components/footer/footerEsp.pug
@@ -1,6 +1,6 @@
-footer.footer#contacts
+footer.footer#contacts(data-aos="fade-in" data-aos-duration="1800")
   .container 
-    p(data-aos="fade-in" data-aos-duration="1800").footer__title.title Contactos
+    p.footer__title.title Contactos
     .footer__row
       a.footer__item(href="https://wa.me/5521999365384")
         img(src=require("../../../images/icons/new-footer-icons/whatsapp.svg"), alt="whatsapp")
