--- a/src/components/goal/goal.pug
+++ b/src/components/goal/goal.pug
@@ -1,9 +1,9 @@
 .goal
   .container
     .goal__wrapper
-      .goal__image
+      div(data-aos="fade-right" data-aos-duration="1800").goal__image
         img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/laptop.jpg"), alt="why")  
-      .goal__box
+      div(data-aos="fade-left" data-aos-duration="1800").goal__box
         .goal__content
           p.goal__question POR QUE É TÃO IMPORTANTE TER UM SITE ?
           p.goal__answer Um site é a melhor vitrine para seu negócio online
