--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -2,14 +2,14 @@
   .container 
     .home__box
       .home__greetings 
-        p(data-aos="fade-in" data-aos-duration="1800") Pensou em sites?
-        p(data-aos="fade-in" data-aos-delay="1800" data-aos-duration="1800") Pensou e-Formaliza
+        p.animate__animated.animate__bounce Pensou em sites?
+        p.animate__animated.animate__flipInX.animate__delay-1s Pensou e-Formaliza
       .home__row       
-        .home__column
+        .animate__animated.animate__fadeInRight.animate__delay-1s.animate__slow.home__column
           .home__video.hovered
             .home__play 
               img(src=require("../../../images/youtube-icon.svg"), alt="play")
-        .home__column
+        .animate__animated.animate__fadeInLeft.animate__delay-1s.animate__slow.home__column
           p.home__title Criamos sites modernos
           ul.home__list
             li Criamos sites profissionais 
