--- a/src/components/home/homeEng.pug
+++ b/src/components/home/homeEng.pug
@@ -2,14 +2,14 @@
   .container 
     .home__box
       .home__greetings 
-        p Think about websites.
-        p Think e-Formaliza
+        p.animate__animated.animate__bounce Think about websites.
+        p.animate__animated.animate__flipInX.animate__delay-1s Think e-Formaliza
       .home__row       
-        .home__column
+        .animate__animated.animate__fadeInRight.animate__delay-1s.animate__slow.home__column
           .home__video.hovered
             .home__play 
               img(src=require("../../../images/youtube-icon.svg"), alt="play")
-        .home__column
+        .animate__animated.animate__fadeInLeft.animate__delay-1s.animate__slow.home__column
           p.home__title We create modern websites
           ul.home__list
             li Exclusive design preparation
