--- a/src/components/portfolio/portfolioEsp.pug
+++ b/src/components/portfolio/portfolioEsp.pug
@@ -1,8 +1,8 @@
 .portfolio
   .container
-    .portfolio__title.title Nuestros Proyectos
+    div(data-aos="fade-in" data-aos-duration="1800").portfolio__title.title Nuestros Proyectos
     //Slider main container
-    .swiper
+    div(data-aos="fade-in" data-aos-duration="1800" data-aos-delay="400").swiper
       //Additional required wrapper
       .swiper-wrapper
         //Slides
@@ -25,5 +25,5 @@
       //pagination
       .swiper-pagination
     //navigation buttons
-  .swiper-button-prev
-  .swiper-button-next
+  div(data-aos="fade-right" data-aos-duration="1800" data-aos-delay="500").swiper-button-prev
+  div(data-aos="fade-left" data-aos-duration="1800" data-aos-delay="500").swiper-button-next
