--- a/src/components/goal/goalEng.pug
+++ b/src/components/goal/goalEng.pug
@@ -1,9 +1,9 @@
 .goal
   .container
     .goal__wrapper
-      .goal__image
+      div(data-aos="fade-right" data-aos-duration="1800").goal__image
         img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/laptop.jpg"), alt="why") 
-      .goal__box
+      div(data-aos="fade-left" data-aos-duration="1800").goal__box
         .goal__content
           p.goal__question WHY IS IT SO IMPORTANT TO HAVE A WEBSITE?
           p.goal__answer A website is the best online showcase for your business
