--- a/src/components/home/homeEsp.pug
+++ b/src/components/home/homeEsp.pug
@@ -2,14 +2,14 @@
   .container 
     .home__box
       .home__greetings 
-        p Pensaste en sitios WEB?
-        p Pensaste e-Formaliza
+        p.animate__animated.animate__bounce Pensaste en sitios WEB?
+        p.animate__animated.animate__flipInX.animate__delay-1s Pensaste e-Formaliza
       .home__row       
-        .home__column
+        .animate__animated.animate__fadeInRight.animate__delay-1s.animate__slow.home__column
           .home__video.hovered
             .home__play 
               img(src=require("../../../images/youtube-icon.svg"), alt="play")
-        .home__column
+        .animate__animated.animate__fadeInLeft.animate__delay-1s.animate__slow.home__column
           p.home__title Creamos sitios WEB modernos
           ul.home__list
             li Creamos sitios WEB profesionales
