--- a/src/components/offers/offers.pug
+++ b/src/components/offers/offers.pug
@@ -1,8 +1,8 @@
 .offers
   .container
-    p.offers__title.title Aproveite as promoções de 2022
+    p(data-aos="fade-in" data-aos-duration="1800").offers__title.title Aproveite as promoções de 2022
     .offers__box
-      ul.offers__list
+      ul(data-aos="fade-right" data-aos-duration="1800").offers__list
         li.offers__item.offer
           button.offer__btn(type="button") Seu Amigo Vale Desconto
           .offer__description 
@@ -10,12 +10,12 @@
         li.offers__item.offer
           button.offer__btn(type="button") Sua Manutenção Gratis
           .offer__description 
-            p Contrate nossos serviços de desenvolvimento até o dia 31 de julho e ganhe 06 meses de manutenção gratis !
+            p Contrate nossos serviços de desenvolvimento até o dia 30 de setembro e ganhe 06 meses de manutenção gratis !
         li.offers__item.offer
           button.offer__btn(type="button") Cadastro Google
           .offer__description 
-            p Fechando sua contratação de até o dia 31 de maio, o cadastro de sua empresa no Google será realizado gratuitamente !
-      .offers__image
+            p Fechando sua contratação de até o dia 30 de setembro, o cadastro de sua empresa no Google será realizado gratuitamente !
+      div(data-aos="fade-left" data-aos-duration="1800" data-aos-delay="600").offers__image
         img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/money.png"), alt="promotion")
 
 
