--- a/src/components/offers/offersEsp.pug
+++ b/src/components/offers/offersEsp.pug
@@ -1,8 +1,8 @@
 .offers
   .container
-    p.offers__title.title Aprovecha las promociones de 2022
+    p(data-aos="fade-in" data-aos-duration="1800").offers__title.title Aprovecha las promociones de 2022
     .offers__box
-      ul.offers__list
+      ul(data-aos="fade-right" data-aos-duration="1800").offers__list
         li.offers__item.offer
           button.offer__btn(type="button") Tu amigo vale el descuento
           .offer__description 
@@ -10,12 +10,12 @@
         li.offers__item.offer
           button.offer__btn(type="button") Mantenimiento Gratuito
           .offer__description 
-            p ¡Contrata nuestros servicios de desarrollo hasta el 31 de mayo y obtén 6 meses de mantenimiento gratis!
+            p ¡Contrata nuestros servicios de desarrollo hasta el 30 de septiembre y obtén 6 meses de mantenimiento gratis!
         li.offers__item.offer
           button.offer__btn(type="button") Registro en Google Business
           .offer__description 
-            p Contratando hasta el 31 de julio, ¡El registro de tu empresa en Google Business se realizará de forma gratuita!
-      .offers__image
+            p Contratando hasta el 30 de septiembre, ¡El registro de tu empresa en Google Business se realizará de forma gratuita!
+      div(data-aos="fade-left" data-aos-duration="1800" data-aos-delay="600").offers__image
         img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/money.png"), alt="promotion")
 
 
