--- a/src/components/promotion/promotion.pug
+++ b/src/components/promotion/promotion.pug
@@ -1,7 +1,7 @@
 .promotion#promotion
   .container
-    .promotion__title.title Promovemos
-    .promotion__row  
+    div(data-aos="fade-in" data-aos-duration="1800").promotion__title.title Promovemos
+    div(data-aos="fade-in" data-aos-duration="1800").promotion__row  
       .promotion__item.item
         .item__img
           img(src=require("../../../images/icons/instagram-red.svg"), alt="instagram")
@@ -10,10 +10,10 @@
         .item__img
           img(src=require("../../../images/icons/google-business-red.svg"), alt="google-business")
         .item__description Cadastro no Google    
-    .promotion__box 
+    div(data-aos="fade-in" data-aos-duration="1800").promotion__box 
       p.promotion__text O Gerenciamento de seu Instagram por especialistas com experiência aumentará o reconhecimento de sua marca e economizará seu tempo, redirecionando-o para gestão do seu negócio
       p.promotion__text O cadastro no Google, aumentará a visibilidade de sua empresa na WEB e será fonte adicional para visitas de novos usuários e clientes, através de comentários e avaliações
-    a.promotion__btn.btn(href="#ask") Saiba mais!  
+    a(data-aos="fade-in" data-aos-duration="1800").promotion__btn.btn(href="#ask") Saiba mais!  
       
 
     
