--- a/src/components/promotion/promotionEng.pug
+++ b/src/components/promotion/promotionEng.pug
@@ -1,7 +1,7 @@
 .promotion#promotion
   .container
-    .promotion__title.title Promotion
-    .promotion__row  
+    div(data-aos="fade-in" data-aos-duration="1800").promotion__title.title Promotion
+    div(data-aos="fade-in" data-aos-duration="1800").promotion__row  
       .promotion__item.item
         .item__img
           img(src=require("../../../images/icons/instagram-red.svg"), alt="instagram")
@@ -10,10 +10,10 @@
         .item__img
           img(src=require("../../../images/icons/google-business-red.svg"), alt="google-business")
         .item__description Google Business Subscription 
-    .promotion__box 
+    div(data-aos="fade-in" data-aos-duration="1800").promotion__box 
       p.promotion__text Managing your Instagram by experienced staff increases your brand popularity and saves your time, redirecting it to managing your business
       p.promotion__text Subscription in Google Business increases your company's visibility on the WEB and will be an additional source for visits by new users and customers, through comments and evaluations
-    a.promotion__btn.btn(href="#ask") Learn more!  
+    a(data-aos="fade-in" data-aos-duration="1800").promotion__btn.btn(href="#ask") Learn more!  
       
 
     
