--- a/src/components/promotion/promotionEsp.pug
+++ b/src/components/promotion/promotionEsp.pug
@@ -1,7 +1,7 @@
 .promotion#promotion
   .container
-    .promotion__title.title Promovemos
-    .promotion__row  
+    div(data-aos="fade-in" data-aos-duration="1800").promotion__title.title Promovemos
+    div(data-aos="fade-in" data-aos-duration="1800").promotion__row  
       .promotion__item.item
         .item__img
           img(src=require("../../../images/icons/instagram-red.svg"), alt="instagram")
@@ -10,10 +10,10 @@
         .item__img
           img(src=require("../../../images/icons/google-business-red.svg"), alt="google-business")
         .item__description Registro en Google Business  
-    .promotion__box 
+    div(data-aos="fade-in" data-aos-duration="1800").promotion__box 
       p.promotion__text La gestión de su Instagram por parte de expertos aumentará el conocimiento de su marca y le ahorrará tiempo, redirigiéndolo a la gestión de su negocio
       p.promotion__text El registro en Google Business aumentará la visibilidad de su empresa en la WEB y será una fuente adicional de visitas de nuevos usuarios y clientes, a través de comentarios y valoraciones
-    a.promotion__btn.btn(href="#ask") ¡Saber más! 
+    a(data-aos="fade-in" data-aos-duration="1800").promotion__btn.btn(href="#ask") ¡Saber más! 
       
 
     
