--- a/src/components/portfolio/portfolio.pug
+++ b/src/components/portfolio/portfolio.pug
@@ -25,5 +25,7 @@
       //pagination
       .swiper-pagination
     //navigation buttons
-  div(data-aos="fade-right" data-aos-duration="1800" data-aos-delay="500").swiper-button-prev
-  div(data-aos="fade-left" data-aos-duration="1800" data-aos-delay="500").swiper-button-next
+  .swiper-button-prev
+  .swiper-button-next
+  //- div(data-aos="fade-right" data-aos-duration="1800" data-aos-delay="500").swiper-button-prev
+  //- div(data-aos="fade-left" data-aos-duration="1800" data-aos-delay="500").swiper-button-next
