added titles/modified alts for SEO

--- a/src/components/ask/ask.pug
+++ b/src/components/ask/ask.pug
@@ -3,7 +3,7 @@
     p(data-aos="fade-in" data-aos-duration="1800").ask__title.title SOLICITE UMA CONVERSA SEM COMPROMISSO:
     div(data-aos="fade-in" data-aos-duration="1800" data-aos-delay="500").ask__box
       .ask__image
-        img(src=require("../../../images/student_asking_question.svg"), alt="ask") 
+        img(src=require("../../../images/student_asking_question.svg"), alt="Dúvidas sobre criação de sites", title="Deixe seu número que entraremos em contato!") 
       form.ask__form.form(action="https://formsubmit.co/contato@eformaliza.com" method="POST")
         .form__label
           label(for="name") Seu nome
