--- a/src/components/creation/creation.pug
+++ b/src/components/creation/creation.pug
@@ -4,29 +4,29 @@
     div(data-aos="fade-in" data-aos-duration="1800" data-aos-delay="400").creation__row  
       .creation__item.item
         .item__img
-          img(src=require("../../../images/icons/bolos/design.svg"), alt="web-design")
+          img(src=require("../../../images/icons/bolos/design.svg"), alt="desenho de sites", title="desenho profissional para seu web site")
         .item__description Desenho Gráfico
       .creation__item.item
         .item__img
-          img(src=require("../../../images/icons/bolos/webPage.svg"), alt="web")
+          img(src=require("../../../images/icons/bolos/webPage.svg"), alt="criação de web sites", title="criação de web sites profissionais para seu negócio")
         .item__description Websites Profissionais
       .creation__item.item
         .item__img
-          img(src=require("../../../images/icons/bolos/card.svg"), alt="card")
+          img(src=require("../../../images/icons/bolos/card.svg"), alt="cartões de visita virtuais", title="cartões de visita virtuais para seu negócio")
         .item__description Cartões de Visita Virtuais
     div(data-aos="fade-in" data-aos-duration="1800").creation__title.title Serviços relacionados
     div(data-aos="fade-in" data-aos-duration="1800" data-aos-delay="400").creation__row
       .creation__item.item
         .item__img
-          img(src=require("../../../images/icons/bolos/maintenance.svg"), alt="maintenance")
+          img(src=require("../../../images/icons/bolos/maintenance.svg"), alt="manutenção de Websites", title="manutenção de seu site")
         .item__description Manutenção de Websites
       .creation__item.item
         .item__img
-          img(src=require("../../../images/icons/bolos/www.svg"), alt="hosting")
+          img(src=require("../../../images/icons/bolos/www.svg"), alt="dominios e hospedagem de sites", title="dominios e hospedagem de sites")
         .item__description Assesoramento com Domínios e Hospedagens
       .creation__item.item
         .item__img
-          img(src=require("../../../images/icons/bolos/coding.svg"), alt="coding")
+          img(src=require("../../../images/icons/bolos/coding.svg"), alt="programação", title="serviços de programação")
         .item__description Serviços de Programação Front-End
     .creation__box
       div(data-aos="fade-in" data-aos-duration="1800").creation__question O que garantimos ?
