--- a/src/components/discount/discount.pug
+++ b/src/components/discount/discount.pug
@@ -2,7 +2,7 @@
   .container
     p(data-aos="fade-in" data-aos-duration="1800").discount__title.title Atenção!!!
     div(data-aos="fade-in" data-aos-duration="1800" data-aos-delay="300").discount__image 
-      img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/fire.png"), alt="sale")
+      img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/fire.png"), alt="oferta", title="oferta")
     .discount__timer.timer
       p(data-aos="fade-in" data-aos-duration="1800").timer__text ATÉ 30 DE SETEMBRO, GANHE DESCONTO PROMOCIONAL DE 10% EM TODOS OS NOSSOS SERVIÇOS      
       p.timer__time 21:13:33
