--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -18,5 +18,5 @@ footer.footer#contacts(data-aos="fade-in" data-aos-duration="1800")
       .footer__unit 
         .footer__copyright 
           p Created by 
-            a(href="https://eformaliza.com/") eformaliza.com
+            a(href="https://eformaliza.com/" title="clique para saber mais") eformaliza.com
   
