--- a/src/components/goal/goal.pug
+++ b/src/components/goal/goal.pug
@@ -2,7 +2,7 @@
   .container
     .goal__wrapper
       div(data-aos="fade-right" data-aos-duration="1800").goal__image
-        img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/laptop.jpg"), alt="why")  
+        img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/laptop.jpg"), alt="por que ter um site", title ="por que ter um site")  
       div(data-aos="fade-left" data-aos-duration="1800").goal__box
         .goal__content
           p.goal__question POR QUE É TÃO IMPORTANTE TER UM SITE ?
