--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,7 +1,7 @@
 header.header
   .container
     a(href="./index.html")   
-      img.header__logo.logo(src=require("../../../images/logo_principal.svg"), alt="eformaliza")
+      img.header__logo.logo(src=require("../../../images/logo_principal.svg"), alt="criação de sites", title="criação de websites")
     nav.header__nav 
       .header__list
         a.header__item(href="#home" id="toHome") Home
