--- a/src/components/home/home.pug
+++ b/src/components/home/home.pug
@@ -8,7 +8,7 @@
         .animate__animated.animate__fadeInRight.animate__delay-1s.animate__slow.home__column
           .home__video.hovered
             .home__play 
-              img(src=require("../../../images/youtube-icon.svg"), alt="play")
+              img(src=require("../../../images/youtube-icon.svg"), alt="criação de sites profissionais", title="criação de sites profissionais")
         .animate__animated.animate__fadeInLeft.animate__delay-1s.animate__slow.home__column
           p.home__title Criamos sites modernos
           ul.home__list
