--- a/src/components/promotion/promotion.pug
+++ b/src/components/promotion/promotion.pug
@@ -4,11 +4,11 @@
     div(data-aos="fade-in" data-aos-duration="1800").promotion__row  
       .promotion__item.item
         .item__img
-          img(src=require("../../../images/icons/instagram-red.svg"), alt="instagram")
+          img(src=require("../../../images/icons/instagram-red.svg"), alt="instagram", title="gerenciamento instagram")
         .item__description Gerenciamento Instagram
       .promotion__item.item 
         .item__img
-          img(src=require("../../../images/icons/google-business-red.svg"), alt="google-business")
+          img(src=require("../../../images/icons/google-business-red.svg"), alt="google business", title="cadastro no google")
         .item__description Cadastro no Google    
     div(data-aos="fade-in" data-aos-duration="1800").promotion__box 
       p.promotion__text O Gerenciamento de seu Instagram por especialistas com experiência aumentará o reconhecimento de sua marca e economizará seu tempo, redirecionando-o para gestão do seu negócio
