--- a/src/components/offers/offers.pug
+++ b/src/components/offers/offers.pug
@@ -16,6 +16,6 @@
           .offer__description 
             p Fechando sua contratação de até o dia 30 de setembro, o cadastro de sua empresa no Google será realizado gratuitamente !
       div(data-aos="fade-left" data-aos-duration="1800" data-aos-delay="600").offers__image
-        img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/money.png"), alt="promotion")
+        img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/money.png"), alt="promoções e ofertas", title="nossas promoções")
 
 
