--- a/src/components/ask/askEng.pug
+++ b/src/components/ask/askEng.pug
@@ -8,11 +8,11 @@
         .form__label
           label(for="name") Your name
         .form__input 
-          input(type="text" placeholder="name" name="name" required)
+          input(type="text" minlength="3" placeholder="name" name="name" required)
         .form__label
           label(for="name") You phone
         .form__input
-          input(type="phone" placeholder="phone" name="phone" required)
+          input(type="number" minlength="7" placeholder="phone" name="phone" required)
         .form__label
           label(for="email") Your email
         .form__input
