--- a/src/components/header/headerEng.pug
+++ b/src/components/header/headerEng.pug
@@ -8,7 +8,7 @@ header.header
         a.header__item(href="#creation" id="toCreation") Creation      
         a.header__item(href="#promotion" id="toPromotion") Promotion
         a.header__item(href="blog.html") Blog
-        a.header__item(href="index.html") FAQ
+        //- a.header__item(href="index.html") FAQ
         a.header__item(href="#contacts" id="toContacts") Contacts
     nav.header__nav_burger
       .burger__inner  
