--- a/src/components/offers/offers.pug
+++ b/src/components/offers/offers.pug
@@ -10,11 +10,11 @@
         li.offers__item.offer
           button.offer__btn(type="button") Sua Manutenção Gratis
           .offer__description 
-            p Contrate nossos serviços de desenvolvimento até o dia 30 de setembro e ganhe 06 meses de manutenção gratis !
+            p Contrate nossos serviços de desenvolvimento até o dia 31 de dezembro e ganhe 06 meses de manutenção gratis !
         li.offers__item.offer
           button.offer__btn(type="button") Cadastro Google
           .offer__description 
-            p Fechando sua contratação de até o dia 30 de setembro, o cadastro de sua empresa no Google será realizado gratuitamente !
+            p Fechando sua contratação de até o dia 31 de dezembro, o cadastro de sua empresa no Google será realizado gratuitamente !
       div(data-aos="fade-left" data-aos-duration="1800" data-aos-delay="600").offers__image
         img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/money.png"), alt="promoções e ofertas", title="nossas promoções")
 
