--- a/src/components/offers/offersEsp.pug
+++ b/src/components/offers/offersEsp.pug
@@ -10,11 +10,11 @@
         li.offers__item.offer
           button.offer__btn(type="button") Mantenimiento Gratuito
           .offer__description 
-            p ¡Contrata nuestros servicios de desarrollo hasta el 30 de septiembre y obtén 6 meses de mantenimiento gratis!
+            p ¡Contrata nuestros servicios de desarrollo hasta el 31 de diciembre y obtén 6 meses de mantenimiento gratis!
         li.offers__item.offer
           button.offer__btn(type="button") Registro en Google Business
           .offer__description 
-            p Contratando hasta el 30 de septiembre, ¡El registro de tu empresa en Google Business se realizará de forma gratuita!
+            p Contratando hasta el 31 de diciembre, ¡El registro de tu empresa en Google Business se realizará de forma gratuita!
       div(data-aos="fade-left" data-aos-duration="1800" data-aos-delay="600").offers__image
         img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/money.png"), alt="promotion")
 
