--- a/src/components/portfolio/portfolioEsp.pug
+++ b/src/components/portfolio/portfolioEsp.pug
@@ -7,7 +7,11 @@
       .swiper-wrapper
         //Slides
         .swiper-slide
-          img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/oliveira.jpg"), alt="projetos realizados") 
+          img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/pizzas.jpg"), alt="projetos realizados") 
+        .swiper-slide
+          img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/oliveira.jpg"), alt="projetos realizados")
+        .swiper-slide
+          img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/sasha.jpg"), alt="projetos realizados")  
         .swiper-slide
           img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/margarita.jpg"), alt="projetos realizados")
         .swiper-slide
