--- a/src/components/header/headerEsp.pug
+++ b/src/components/header/headerEsp.pug
@@ -8,7 +8,7 @@ header.header
         a.header__item(href="#creation" id="toCreation") Creamos      
         a.header__item(href="#promotion" id="toPromotion") Promovemos
         a.header__item(href="blog.html") Blog
-        a.header__item(href="index.html") FAQ
+        //- a.header__item(href="index.html") FAQ
         a.header__item(href="#contacts" id="toContacts") Contactos
     nav.header__nav_burger
       .burger__inner  
