--- a/src/eng.pug
+++ b/src/eng.pug
@@ -4,16 +4,16 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
-    meta(name="description" content="Professional website creation" )
+    meta(name="description" content="Website creation and maintenance, online pages, promotion pages, online stores, e-commerce, design, coding, promotion on social networks. Tray Platforms, Integrated Store, WordPress" )
     meta(name="keywords" content="creation, sites, web, page, pagina, emprendedor, company, lawers, internet, frontend, layout")
     meta(property="og:type" content="website")
-    meta(property="og:title" content="e-Formaliza") 
+    meta(property="og:title" content="Creating professional websites for your business") 
     meta(property="og:site_name" content="Do you think about WEB sites? Think about e-Formaliza") 
     meta(property="og:url" content="https://www.eformaliza.com/") 
-    meta(property="og:description" content="Professional website creation") 
+    meta(property="og:description" content="Website creation and maintenance, online pages, promotion pages, online stores, e-commerce, design, coding, promotion on social networks. Tray Platforms, Integrated Store, WordPress") 
     meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg")
     script(defer src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver")
-    title e-Formaliza
+    title Creating professional websites for your business
   body.preload#home(style="visibility: hidden;")
     include components/langToggle/langToggleEng
     include components/header/headerEng
