--- a/src/esp.pug
+++ b/src/esp.pug
@@ -4,16 +4,16 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
-    meta(name="description" content="Creación de sitios WEB profesionales" )
+    meta(name="description" content="Creación y mantenimiento de sitios web, páginas web, páginas de promoción, tiendas online, comercio electrónico, e-commerce, diseño, codificación, promoción en redes sociales. Plataformas Tray, Tienda Integrada, WordPress" )
     meta(name="keywords" content="creación, sites, web, page, pagina, emprendedor, empresa, avogados, internet, frontend, layout")
     meta(property="og:type" content="website")
-    meta(property="og:title" content="e-Formaliza") 
+    meta(property="og:title" content="Creación de páginas web profesionales para su negocio") 
     meta(property="og:site_name" content="Pensaste en sitios WEB? Pensaste e-Formaliza") 
     meta(property="og:url" content="https://www.eformaliza.com/") 
-    meta(property="og:description" content="Creación de sitios WEB profesionales") 
+    meta(property="og:description" content="Creación y mantenimiento de sitios web, páginas web, páginas de promoción, tiendas online, comercio electrónico, e-commerce, diseño, codificación, promoción en redes sociales. Plataformas Tray, Tienda Integrada, WordPress") 
     meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg")
     script(defer src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver")
-    title e-Formaliza
+    title Creación de páginas web profesionales para su negocio
   body.preload#home(style="visibility: hidden;")
     include components/langToggle/langToggleEsp
     include components/header/headerEsp
