--- a/src/components/blogHeader/blogHeader.scss
+++ b/src/components/blogHeader/blogHeader.scss
@@ -1,7 +1,6 @@
 @import "../../styles/variables";
 
-.headerBlog {
- 
+.blogHeader {
   background-color: black;
   transition: all 0.8s linear 0.05s;
   display: block;
@@ -22,7 +21,7 @@
     position: relative; 
   }
 
-  img.headerBlog__logo_scroll {
+  img.blogHeader__logo_scroll {
     display: none; 
   }
 
@@ -64,7 +63,7 @@
 
 }
 
-.scroll.headerBlog {
+.scroll.blogHeader {
   background-color: rgba(0, 0, 0, 0.612);
   transition: all 0.8s linear 0.05s;
   position: fixed;
@@ -96,7 +95,7 @@
 }
 
  @media (max-width: 1160px) {
-  .headerBlog {
+  .blogHeader {
     img.logo {
       height: 140px;  
     }
@@ -105,7 +104,7 @@
 }
 
 @media (max-width: 950px) {
-  .headerBlog {
+  .blogHeader {
     img.logo {
       height: 120px;
     }
@@ -118,7 +117,7 @@
       font-size: 40px;
     }
   }
-  .scroll.headerBlog {
+  .scroll.blogHeader {
   
     &__nav {
       transform: translateY(18px); 
@@ -132,7 +131,7 @@
 }
 
 @media (max-width: 700px) {
-  .headerBlog {
+  .blogHeader {
     
     img.logo {  
       height: 100px;
@@ -151,7 +150,7 @@
 }
 
 @media (max-width: 555px) {
-  .headerBlog {
+  .blogHeader {
     text-align: center;
     transition: none;
 
@@ -186,7 +185,7 @@
     }
   }
 
-  .scroll.headerBlog {
+  .scroll.blogHeader {
     height: 55px;
     text-align: center;
     transition: none;
