--- a/src/eng.pug
+++ b/src/eng.pug
@@ -13,6 +13,8 @@ html(lang="en")
     meta(property="og:description" content="Website creation and maintenance, online pages, promotion pages, online stores, e-commerce, design, coding, promotion on social networks. Tray Platforms, Integrated Store, WordPress") 
     meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg")
     script(defer src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver")
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-63DZLREM66"></script>
+    <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-63DZLREM66');</script>
     title Creating professional websites for your business
   body.preload#home(style="visibility: hidden;")
     include components/langToggle/langToggleEng
@@ -26,5 +28,6 @@ html(lang="en")
     include components/discount/discountEng
     include components/ask/askEng
     include components/footer/footerEng
+    include components/whatsappIcon/whatsappIcon
    
     
