--- a/src/esp.pug
+++ b/src/esp.pug
@@ -13,6 +13,8 @@ html(lang="en")
     meta(property="og:description" content="Creación y mantenimiento de sitios web, páginas web, páginas de promoción, tiendas online, comercio electrónico, e-commerce, diseño, codificación, promoción en redes sociales. Plataformas Tray, Tienda Integrada, WordPress") 
     meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg")
     script(defer src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver")
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-63DZLREM66"></script>
+    <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-63DZLREM66');</script>
     title Creación de páginas web profesionales para su negocio
   body.preload#home(style="visibility: hidden;")
     include components/langToggle/langToggleEsp
@@ -26,5 +28,6 @@ html(lang="en")
     include components/discount/discountEsp
     include components/ask/askEsp
     include components/footer/footerEsp
+    include components/whatsappIcon/whatsappIcon
    
     
